--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 asgiref==3.10.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
 dj-database-url==0.5.0
 Django==4.2.25
 gunicorn==20.1.0
+idna==3.11
 psycopg2==2.9.11
+requests==2.32.5
 setuptools==80.9.0
 sqlparse==0.5.3
+urllib3==2.5.0
 whitenoise==5.3.0
